add examples to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,11 @@ x86_64 = "0.8"
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
 riscv = "0.5"
+
+[patch.crates-io]
+uefi = { git = 'https://github.com/rcore-os/uefi-rs', branch = "alloc-align" }
+
+[workspace]
+members = [
+    "examples/uefi",
+]
