--- a/examples/uefi/Makefile
+++ b/examples/uefi/Makefile
@@ -1,7 +1,8 @@
 MODE ?= debug
-EFI := target/x86_64-unknown-uefi/$(MODE)/uefi.efi
+TARGET := ../../target
 OVMF := OVMF.fd
-ESP := target/esp
+EFI := $(TARGET)/x86_64-unknown-uefi/$(MODE)/uefi.efi
+ESP := $(TARGET)/x86_64-unknown-uefi/$(MODE)
 BUILD_ARGS := -Z build-std=core,alloc
 QEMU_ARGS := -net none -nographic -cpu qemu64,fsgsbase
 OBJDUMP := rust-objdump
