--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ description = "Abstraction of CPU for OS development on multiple architectures."
 
 [dependencies]
 log = "0.4"
+raw-cpuid = "7.0.3"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.8"
