riscv: fix trap handling. add example based on OpenSBI.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ uefi = { git = 'https://github.com/rcore-os/uefi-rs', branch = "alloc-align" }
 members = [
     "examples/uefi",
 ]
+
+exclude = [
+    "examples/riscv",
+]
