--- a/examples/uefi/Makefile
+++ b/examples/uefi/Makefile
@@ -1,5 +1,5 @@
 MODE ?= debug
-TARGET := ../../target
+TARGET := target
 OVMF := OVMF.fd
 EFI := $(TARGET)/x86_64-unknown-uefi/$(MODE)/uefi.efi
 ESP := $(TARGET)/x86_64-unknown-uefi/$(MODE)
