--- a/examples/uefi/Makefile
+++ b/examples/uefi/Makefile
@@ -2,7 +2,7 @@ MODE ?= debug
 TARGET := target
 OVMF := OVMF.fd
 EFI := $(TARGET)/x86_64-unknown-uefi/$(MODE)/uefi.efi
-ESP := $(TARGET)/x86_64-unknown-uefi/$(MODE)
+ESP := $(TARGET)/x86_64-unknown-uefi/$(MODE)/esp
 BUILD_ARGS := -Z build-std=core,alloc
 QEMU_ARGS := -net none -nographic -cpu qemu64,fsgsbase
 OBJDUMP := rust-objdump
