x86_64: remove dependency on fsgsbase instructions

--- a/examples/uefi/Makefile
+++ b/examples/uefi/Makefile
@@ -4,7 +4,7 @@ OVMF := OVMF.fd
 EFI := $(TARGET)/x86_64-unknown-uefi/$(MODE)/uefi.efi
 ESP := $(TARGET)/x86_64-unknown-uefi/$(MODE)/esp
 BUILD_ARGS := -Z build-std=core,alloc
-QEMU_ARGS := -net none -nographic -cpu qemu64,fsgsbase
+QEMU_ARGS := -net none -nographic
 OBJDUMP := rust-objdump
 
 ifeq (${MODE}, release)
