--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,9 @@ jobs:
     - uses: actions-rs/toolchain@v1
       with:
         profile: minimal
+        toolchain: nightly
         target: ${{ matrix.target }}
+        components: clippy
     - name: Build
       uses: actions-rs/cargo@v1
       with:
