--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "trapframe"
-version = "0.3.0"
-authors = ["Runji Wang <wangrunji0408@163.com>"]
+version = "0.4.0"
+authors = ["Runji Wang <wangrunji0408@163.com>", "Jiajie Chen <c@jia.je>"]
 edition = "2018"
 description = "Handle Trap Frame across kernel and user space on multiple ISAs."
 homepage = "https://github.com/rcore-os/trapframe-rs"
@@ -22,7 +22,7 @@ x86_64 = "0.11"
 raw-cpuid = "8.0"
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
-riscv = { git = "https://github.com/rcore-os/riscv", rev = "d9794e", features = ["inline-asm"] }
+riscv = "0.5"
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
-aarch64 = { git = "https://github.com/rcore-os/aarch64", version = "3.0.1" }
+cortex-a = "3.0"
