--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       matrix:
         target: [
           x86_64-unknown-linux-gnu,
+          x86_64-apple-darwin,
           aarch64-unknown-linux-gnu,
           riscv32imac-unknown-none-elf,
           riscv64imac-unknown-none-elf,
