x86_64: add test for function call

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,3 +55,22 @@ jobs:
       with:
         command: doc
         args: --target ${{ matrix.target }}
+
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, macos-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - run: rm rust-toolchain
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+      - name: Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features
