--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ raw-cpuid = "8.0"
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
 riscv = "0.5"
 
-[target.'cfg(target_arch = "aarch64")'.dependencies]
+[target.'cfg(all(target_arch = "aarch64", target_os = "none"))'.dependencies]
 cortex-a = "3.0"
