--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,8 @@ exclude = ["docs", ".idea"]
 [target.'cfg(all(target_arch = "x86_64", target_os = "none"))'.dependencies]
 x86_64 = "0.11"
 raw-cpuid = "8.0"
+
+[features]
+default = []
+# This requires allocating a 64K consecutive memory block.
+ioport_bitmap = []
