--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "trapframe"
-version = "0.5.0"
+version = "0.5.1"
 authors = [
     "Runji Wang <wangrunji0408@163.com>",
     "Jiajie Chen <c@jia.je>",
     "Hoblovski <daizy19@mails.tsinghua.edu.cn>",
+    "Ben Pig Chu <benpichu@gmail.com>",
 ]
 edition = "2018"
 description = "Handle Trap Frame across kernel and user space on multiple ISAs."
