--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trapframe"
-version = "0.5.1"
+version = "0.6.0"
 authors = [
     "Runji Wang <wangrunji0408@163.com>",
     "Jiajie Chen <c@jia.je>",
@@ -22,8 +22,8 @@ exclude = ["docs", ".idea"]
 
 [dependencies]
 
-[target.'cfg(all(target_arch = "x86_64", target_os = "none"))'.dependencies]
-x86_64 = "0.11"
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+x86_64 = "0.12"
 raw-cpuid = "8.0"
 
 [features]
