--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         target: [
           x86_64-unknown-linux-gnu,
-          x86_64-apple-darwin,
+          x86_64-apple-darwin,x86_64-unknown-linux-gnu
           aarch64-unknown-linux-gnu,
           aarch64-unknown-none-softfloat,
           riscv32imac-unknown-none-elf,
@@ -70,12 +70,12 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --all-features --target x86_64-linux-kernel -Z build-std=core,alloc
+          args: --all-features --target x86_64-unknown-linux-gnu -Z build-std=core,alloc
       - name: Docs
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --all-features --target x86_64-linux-kernel -Z build-std=core,alloc
+          args: --all-features --target x86_64-unknown-linux-gnu  -Z build-std=core,alloc
 
   test-x86_64:
     runs-on: ${{ matrix.os }}
