--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         target: [
           x86_64-unknown-linux-gnu,
-          x86_64-apple-darwin,x86_64-unknown-linux-gnu
+          x86_64-apple-darwin,
           aarch64-unknown-linux-gnu,
           aarch64-unknown-none-softfloat,
           riscv32imac-unknown-none-elf,
